test/deprecated/zipUnbounded.good
zipUnbounded.chpl:1: warning: The behavior of zippered serial loops whose leader is an unbounded range has changed in this release; to maintain the previous behavior, swap a bounded iterand into the leader position (the first expression in the 'zip(...)').
Note: This source location is a guess.
01
12
23
zipUnbounded.chpl:1: error: zippered iterations have non-equal lengths
