test/deprecated/zipUnbounded.chpl
for (i,j) in zip(0.., 1..3) do
  writeln(i,j);

